--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "helloworld": {
+    "ng-state": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/helloworld",
+            "outputPath": "dist/ng-state",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "helloworld:build"
+            "browserTarget": "ng-state:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "helloworld:build:production"
+              "browserTarget": "ng-state:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "helloworld:build"
+            "browserTarget": "ng-state:build"
           }
         },
         "test": {
@@ -99,7 +99,7 @@
         }
       }
     },
-    "helloworld-e2e": {
+    "ng-state-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -107,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "helloworld:serve"
+            "devServerTarget": "ng-state:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "helloworld:serve:production"
+              "devServerTarget": "ng-state:serve:production"
             }
           }
         },
@@ -127,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "helloworld"
+  "defaultProject": "ng-state"
 }
